src/test/deca/context/invalid/print-boolean.deca
// Description:
//    Condition de la règle 3.31 non respectée 
//
// Resultats:
//    Ligne 10: Prinln ne peut prendre qu'un int ou float ou string
//

{
    boolean x = false;
    println(x);
}
